Update to 1.20.5
Reworked networking as per 1.20.5 update

Clients no longer saves a secret key for E2EE, similar to 1.0.0